--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/tests/Packages/data_raw
+/tests/Packages/data_treated
+/tests/Packages/notebooks_exploration_cleaning
+/tests/Packages/py_scripts
+/tests/Packages/notebooks_models
