--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,40 +1,26 @@
 [build-system]
-requires = ["hatchling"]
+requires = [ "hatchling",]
 build-backend = "hatchling.build"
 
-
-
-[tool.setuptools.packages.find]
-where=["src"]
-
-
 [project]
-name = 'Arenz_Group_Python'
+name = "Arenz_Group_Python"
 version = "0.1.21"
-dependencies = [
-    'nptdms',
-    'matplotlib', 
-    'pathlib',
-    'scipy',
-    'numpy',
-    'pandas',
-]
+dependencies = [ "nptdms", "matplotlib", "pathlib", "scipy", "numpy", "pandas", "EC4py",]
 requires-python = ">=3.12"
-authors = [
-  {name = "Gustav Wiberg", email = "gustav.wiberg@unibe.ch"}
-]
-maintainers = [
-  {name = "Gustav Wiberg", email = "gustav.wiberg@unibe.ch"}
-]
-description = 'a pip-installable package with function for Arenz Group'
+description = "a pip-installable package with function for Arenz Group"
 readme = "README.md"
-license = {file = "LICENSE"}
-keywords = ['python', 'arenz group', 'tdms']
-classifiers = [
-  "Development Status :: 4 - Beta",
-  "Operating System :: OS Independent",
-  "Programming Language :: Python"
-]
+keywords = [ "python", "arenz group", "tdms",]
+classifiers = [ "Development Status :: 4 - Beta", "Operating System :: OS Independent", "Programming Language :: Python",]
+[[project.authors]]
+name = "Gustav Wiberg"
+email = "gustav.wiberg@unibe.ch"
+
+[[project.maintainers]]
+name = "Gustav Wiberg"
+email = "gustav.wiberg@unibe.ch"
+
+[project.license]
+file = "LICENSE"
 
 [project.urls]
 Homepage = "https://github.com/Guswib/Arenz_Group_Python"
@@ -42,3 +28,6 @@ Documentation = "https://github.com/Guswib/Arenz_Group_Python"
 Repository = "https://github.com/Guswib/Arenz_Group_Python"
 Issues = "https://github.com/Guswib/Arenz_Group_Python"
 Changelog = "https://github.com/Guswib/Arenz_Group_Python"
+
+[tool.setuptools.packages.find]
+where = [ "src",]
