--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,13 +3,13 @@
 source      : ./docs/source
 destination: ./_site
 
-url: https://nordicec.github.io
+url: https://NanoElectroCatalysis.github.io
 
 # Site settings
 title: EC4py Package
 author:
   name: Gustav Wiberg
-  email: info@nordicec.com
+  email:  
 description: "Great site about Jekyll on GH-Pages."
 
 # Build settings
@@ -29,11 +29,11 @@ enable_copy_code_button: true
 
 aux_links:
   EC4py on GitHub:
-    - https://github.com/nordicec/ec4py
+    - https://github.com/NanoElectroCatalysis/Arenz_Group_Python
 
 # External navigation links
 nav_external_links:
   - title: EC4py on GitHub
-    url: https://github.com/nordicec/ec4py
+    url: https://github.com/NanoElectroCatalysis/Arenz_Group_Python
     hide_icon: false # set to true to hide the external link icon - defaults to false
     opens_in_new_tab: true # set to true to open this link in a new tab - defaults to false
