--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ file = "LICENSE"
 
 [project.urls]
 Homepage = "https://github.com/NanoElectroCatalysis/Arenz_Group_Python"
-Documentation = https://nanoelectrocatalysis.github.io/Arenz_Group_Python"
+Documentation = "https://nanoelectrocatalysis.github.io/Arenz_Group_Python"
 Repository = "https://github.com/NanoElectroCatalysis/Arenz_Group_Python"
 Issues = "https://github.com/NanoElectroCatalysis/Arenz_Group_Python"
 Changelog = "https://github.com/NanoElectroCatalysis/Arenz_Group_Python"
