--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ cython_debug/
 /tests/Packages/notebooks_exploration_cleaning
 /tests/Packages/py_scripts
 /tests/Packages/notebooks_models
+
+/TEMP_Project
