--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,12 +28,12 @@ plugins:
 enable_copy_code_button: true
 
 aux_links:
-  EC4py on GitHub:
+  Arenz_Group_Python on GitHub:
     - https://github.com/NanoElectroCatalysis/Arenz_Group_Python
 
 # External navigation links
 nav_external_links:
-  - title: EC4py on GitHub
+  - title: Arenz_Group_Python on GitHub
     url: https://github.com/NanoElectroCatalysis/Arenz_Group_Python
     hide_icon: false # set to true to hide the external link icon - defaults to false
     opens_in_new_tab: true # set to true to open this link in a new tab - defaults to false
