--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "Arenz_Group_Python"
 version = "0.3.10"
-dependencies = [ "nptdms", "matplotlib", "pathlib", "scipy", "numpy", "pandas", "EC4py",]
+dependencies = [ "nptdms", "matplotlib", "pathlib", "scipy", "numpy", "pandas", "EC4py","elabapi_python"]
 requires-python = ">=3.11"
 description = "a pip-installable package with function for Arenz Group"
 readme = "README.md"
