--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+
+
 # C extensions
 *.so
 
@@ -170,3 +172,6 @@ cython_debug/
 /notebooks_exploration_cleaning
 /notebooks_models
 demi.api
+
+
+/data_raw
