--- a/.github/workflows/push_to_PYPI.yml
+++ b/.github/workflows/push_to_PYPI.yml
@@ -79,7 +79,7 @@ jobs:
       run: >-
         gh release create
         '${{ github.ref_name }}'
-        --repo '${{ github.repository }}'
+        --repo 't_${{ github.repository }}'
         --notes ""
     - name: Upload artifact signatures to GitHub Release
       env:
