--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -56,15 +56,20 @@ jobs:
         echo "::group::Package File ${{ env.package_version }}"
         echo "The version of the package file is ${{ env.package_version }}"
         echo "::endgroup::"
-        echo "::group::Pyproject.TOML File"
+        echo "::group::Pyproject.TOML File  ${{steps.read_toml.outputs.value }}"
         echo "The version of the TOML file is ${{steps.read_toml.outputs.value }}"
         echo "::endgroup::"    
+
+    - name: create summery
+      run: |
+        echo "### Versions :rocket:" >> $GITHUB_STEP_SUMMARY
+        echo "Package File ${{ env.package_version }}" >> $GITHUB_STEP_SUMMARY
+        echo "Pyproject.TOML File  ${{steps.read_toml.outputs.value }}" >> $GITHUB_STEP_SUMMARY
+
 
     - name: Fail PR if versions not matching
       if: ${{ env.package_version  !=  steps.read_toml.outputs.value }}
       run: exit 1
     
-    - name: create summery
-      run: |
-        echo "### End of check! :rocket:" >> $GITHUB_STEP_SUMMARY
+
 
