--- a/.github/workflows/checkVersion.yml
+++ b/.github/workflows/checkVersion.yml
@@ -17,6 +17,7 @@ on:
         required: true
         # The data type of the input
         type: string
+  pull_request:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
