--- a/.github/workflows/push_to_PYPI.yml
+++ b/.github/workflows/push_to_PYPI.yml
@@ -39,6 +39,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: python-package-distributions
+        path: dist/
 
 
   publish-to-pypi:
