--- a/.github/workflows/push_to_PYPI.yml
+++ b/.github/workflows/push_to_PYPI.yml
@@ -89,6 +89,12 @@ jobs:
         inputs: >-
           ./dist/*.tar.gz
           ./dist/*.whl
+    - name: Get version of Package
+      env:      
+        OUTPUT1: ${{needs.build.outputs.output1}}
+      run: |
+        echo: "Version $OUTPUT"
+        echo: "Version ${OUTPUT}"
     - name: Create GitHub Release
       env:
         OUTPUT1: ${{needs.build.outputs.output1}}
