--- a/.github/workflows/push_to_PYPI.yml
+++ b/.github/workflows/push_to_PYPI.yml
@@ -53,8 +53,8 @@ jobs:
         OUTPUT1: ${{needs.build.outputs.output1}}
       run: |
         echo "Package File $OUTPUT1"
-        echo "version=$${{needs.build.outputs.output1}}"
-        echo "version=$${{needs.build.outputs.output1}}"
+        echo "version=${{needs.build.outputs.output1}}"
+        echo "version=${{needs.build.outputs.output1}}"
   
   publish-to-pypi:
     name: >-
@@ -84,7 +84,7 @@ jobs:
       and upload them to GitHub Release
     needs:
     - build
-    - publish-to-pypi
+    #- publish-to-pypi
     runs-on: ubuntu-latest
 
     permissions:
@@ -107,8 +107,8 @@ jobs:
       env:      
         OUTPUT1: ${{needs.build.outputs.output1}}
       run: |
-        echo: "Version $OUTPUT"
-        echo: "Version ${OUTPUT}"
+        echo: "Version $OUTPUT1"
+        echo: "Version ${OUTPUT1}"
     - name: Create GitHub Release
       env:
         OUTPUT1: ${{needs.build.outputs.output1}}
