--- a/.github/workflows/push_to_PYPI.yml
+++ b/.github/workflows/push_to_PYPI.yml
@@ -119,9 +119,9 @@ jobs:
        #'v${{ github.ref_name }}'
       run: >-
         gh release create
-        '$rel_tag' 
+        '${rel_tag}' 
         --repo '${{ github.repository }}'
-        --title='$rel_tag'
+        --title='${rel_tag}'
         --notes ""
     - name: Upload artifact signatures to GitHub Release
       env:
